update tool design and some features
feat: implements the new design improvement to dsc8v3 and some features (eg.: upload/download files).

--- a/dsc8/src/app/dsc8-v2/component/dsc8-v2.component.html
+++ b/dsc8/src/app/dsc8-v2/component/dsc8-v2.component.html
@@ -19,7 +19,8 @@
     <div class="col-6 p-05">
       <label for="pas-output" class="label-control">
         .pas Output
-        <textarea id="pas-output" class="form-control" autocomplete="off" readonly (click)="copyPasOutputToClipboard()"></textarea>
+        <textarea id="pas-output" class="form-control" autocomplete="off" readonly
+          (click)="copyPasOutputToClipboard()"></textarea>
       </label>
     </div>
 
@@ -40,7 +41,8 @@
     <div class="col-6 p-05">
       <label for="dfm-output" class="label-control">
         .dfm Output
-        <textarea id="dfm-output" class="form-control" autocomplete="off" readonly (click)="copyDfmOutputToClipboard()"></textarea>
+        <textarea id="dfm-output" class="form-control" autocomplete="off" readonly
+          (click)="copyDfmOutputToClipboard()"></textarea>
       </label>
     </div>
 
@@ -52,8 +54,8 @@
     </div>
     <div class="col-6 p-3">
       <label for="fast-conversion" class="label-control">
+        <input type="checkbox" id="fast-conversion">
         Fast Conversion
-        <input type="checkbox" id="fast-conversion" class="form-control">
       </label>
     </div>
   </div>
@@ -65,7 +67,7 @@
 
     <!-- current control -->
     <div id="current-control" class="col-12 flex flex-wrap">
-      
+
       <!-- parent -->
       <div class="col-12 p-05">
         <label for="parent-output" class="label-control">
@@ -102,7 +104,7 @@
 
     <!-- order - width -->
     <div id="current-control" class="col-12 flex">
-      
+
       <!-- order -->
       <div class="col-6 p-05">
         <label for="order-input" class="label-control">
