--- a/dsc8/src/app/dsc8-v2/component/dsc8-v2.component.css
+++ b/dsc8/src/app/dsc8-v2/component/dsc8-v2.component.css
@@ -1,3 +1,16 @@
+* {
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-size: 14px;
+   color: white;
+   margin: 0;
+   padding: 0;
+}
+
+:host {
+   background-color: rgb(1, 1, 21);
+   z-index: 9998;
+}
+
 main {
    width: 100vw;
    height: 100vh;
@@ -35,21 +48,22 @@ main {
    box-sizing: border-box;
 }
 .col-12 {
-   width: 100%;
+   width: 100% !important;
 }
 .col-6 {
-   width: 50%;
+   width: 50% !important;
 }
 .col-4 {
-   width: calc((100% / 12) * 4);
+   width: calc((100% / 12) * 4) !important;
 }
 .col-3 {
-   width: calc((100% / 12) * 3);
+   width: calc((100% / 12) * 3) !important;
 }
 
 .label-control {
    font-weight: bold;
    text-indent: 1.5rem;
+   display: unset;
 }
 .form-control {
    background-color: rgb(32, 32, 34);
