--- a/dsc8/src/app/layout/sidebar/sidebar.component.html
+++ b/dsc8/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside id="sidebar" class="flex-shrink-0 p-2 bg-dark" style="width: 280px;">
    
    <!-- header-->
-   <button type="button" class="btn" disabled>
+   <button type="button" class="btn header-btn" disabled>
       <span class="fs-5 fw-semibold">DSC8 3</span>
    </button>
    
